Added template for last lesson

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <br><br>
 
+
     <a href="https://instagram.com">
       <img src="https://i.pinimg.com/originals/84/bc/94/84bc949579252f7f88b4cbdead66e95a.png" alt="insta_logo" />
     </a>
@@ -33,6 +34,101 @@
     <a href="https://tiktok.com">
       <img src="https://cdn141.picsart.com/305061469080211.png?type=webp&to=min&r=640" alt="tiktok_logo" />
     </a>
+
+    <video
+      src="https://ia800208.us.archive.org/4/items/Popeye_forPresident/Popeye_forPresident_512kb.mp4"
+      controls
+      poster="https://www.freedigitalphotos.net/images/img/homepage/394230.jpg"
+    ></video>
+
+    <iframe width="560" height="300" src="https://www.youtube.com/embed/CgC55du1d2o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <br><br><br><br>
+
+<!--
+        table - родитель
+        tr - rows
+        th - columns
+        td - columns
+        caption
+-->
+
+    <table border="1px" cellspacing="0" cellpadding="5px">
+      <caption>Таблиця результатів по квідичу</caption>
+      <tr>
+        <th></th>
+        <th bgcolor="darkred">Gryffindor</th>
+        <th bgcolor="#b8860b">Hufflepuff</th>
+        <th bgcolor="darkblue">Ravenclaw</th>
+        <th bgcolor="darkgreen">Slytherin</th>
+      </tr>
+      <tr>
+        <td>1 round</td>
+        <td>1</td>
+        <td>0</td>
+        <td>1</td>
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>2 round</td>
+        <td>4</td>
+        <td>1</td>
+        <td>2</td>
+        <td>1</td>
+      </tr>
+    </table>
+
+    <br><br><br><br>
+
+    <form>
+      <h3>Лист до Хогвардсу</h3>
+      <div>
+        Привіт, я, <input type="text" placeholder="Введи своє ім'я">, <br>
+        отримав лист зі школи і вважаю за честь прийняти це запрошення 🤩!
+      </div>
+      <br>
+      <i>Повідомляю персональні дані:</i>
+      <br><br>
+      <div>Моя дата народження <input type="date"></div>
+
+     <!--      Radio buttons -->
+      <div>
+        Сподіваюсь, розподільчий капелюх прийме до уваги те, що хочу навчатися на факультеті: <br>
+        Грифіндор <input type="radio" name="value">
+        Слізерин <input type="radio" name="value">
+        Пуфендуй <input type="radio" name="value">
+        Когтевран <input type="radio" name="value">
+      </div>
+      <br>
+
+<!--      Checkboxes -->
+      <div>Бо моїми рисами характеру є:  <br>
+        Відважність <input type="checkbox">
+        Чесність <input type="checkbox">
+        Доброта <input type="checkbox">
+        Благородство <input type="checkbox">
+        Працьовитість <input type="checkbox">
+        Вірність <input type="checkbox">
+        Розум <input type="checkbox">
+        Дотепність <input type="checkbox">
+        Хитрість <input type="checkbox">
+        Рішучість <input type="checkbox">
+      </div>
+      <br>
+
+      <div> Мене цікавять такі додаткові заняття, як: <br>
+       <textarea cols="55" rows="5" placeholder="Ввести список"></textarea>
+      </div>
+      <br>
+
+      <div>
+        Про всяк випадок, моє кодове слово -
+        <input type="password" placeholder="Введи своє кодове слово">
+      </div>
+
+      <br><br>
+      <button type="reset">Очистити</button>
+      <button type="submit">Хедвіга, лети!</button>
+    </form>
   </main>
 </body>
 </html>
